eparate javascript file

--- a/stickers.html
+++ b/stickers.html
@@ -21,77 +21,26 @@
         height: 50px;
         width: 400px;
     }    
+    #editor3 { 
+        position: absolute;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 100;
+        height: 50px;
+        width: 400px;
+    }    
+
 </style>
 <script>
-	function evalWidget(editor){
-		var editorTxt = editor.getValue();
-		var evalResult = eval(editorTxt);
-		alert(evalResult);
-	}
-
 	var nStickers = 0;
 	var MAX_WIDGETS = 100; 
 	var nActiveWidgets = 1;
 	
-	var globalScore=0;
-	
-	function widget(name,editor,interval, runButton){
-		this.name = name;
-		this.editor = editor;
-		this.runButton = runButton;
-		this.timeInterval = interval;
-		this.localScore = 0;
-		this.enabled=true;
-		this.finished=true;		
-		this.interval;
-		
-		this.run = run;
-		function run(w){
-			this.runButton.disabled=true;
-			this.editor.disabled=true;
-			this.enabled = false;
-			this.finished = false;
-			
-			/*alert('000 '+this.localScore);
-			alert('000 '+w);*/
-			
-			this.localScore = 0;
-			var editorTxt = this.editor.getValue();
-			this.interval = setInterval(function(){transferToGlobalScore(w)},this.timeInterval);
-			eval(editorTxt);
-			this.finished = true;
-		}
-
-		this.mindLocal = mindLocal;		
-		function mindLocal(){
-			//alert('aaa '+this.localScore);
-			this.localScore++;
-			//alert('aaa '+this.localScore);
-		}
-		
-	}	
-
-	function transferToGlobalScore(w){
-		/*alert('bbb '+w);
-		alert('bbb '+w.finished);
-		alert('bbb '+w.localScore);*/
-		if(w.localScore>0){
-			//alert('ccc');
-			w.localScore--;
-			globalScore++;
-			document.getElementById('gloabal_score').value = globalScore;
-		} else {
-			//alert('ddd');
-			if(w.finished){
-				w.enabled=true;
-				w.runButton.disabled=false;
-				w.editor.disabled=false;
-				
-				clearInterval(w.interval);
-			}
-		}
-	}
+	var globalScore=0;	
 </script>
+<script src="src-min-noconflict/ace.js" type="text/javascript" charset="utf-8"></script>
+<script src="codemine.js" type="text/javascript" charset="utf-8"></script>
 </head>
 <body>
 
@@ -99,7 +48,6 @@
 
 <div id="editor2">w2.mindLocal();</div>
     
-<script src="src-min-noconflict/ace.js" type="text/javascript" charset="utf-8"></script>
 <H1>AAAA</H1>
 <H1>AAAA</H1>
 <H1>AAAA</H1>
